Add new commit 2

--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
 		<div id="Change", class="2">
 			<p>Commit change 2</p>
 		</div>
+		<div>
+			<p>Commit change 3</p>
+		</div>
 	</body>
 </html>
